2009-04-23  Elliott Baron  <ebaron@redhat.com>

	* ExportWizardConstants.java: Window title added.
	* messages.properties: New key, capitalized options in tab.
	* ValgrindExportWizard.java (init): Set window title. 
	* ValgrindOptionsTab.java: Moved suppressions to a new tab.

2009-04-03  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/valgrind/launch/ExportHandler.java: New file.
	* META-INF/MANIFEST.MF: 0.2.0 version.
	* plugin.xml: New extensions.
	* ValgrindExportWizardPage.java (createControl): Renaming.
	* ValgrindLaunchConfigurationDelegate.java (launch): Clear previous saved
	launch config/launch at beginning of method.
	(createNewProcess): Wrapper for creating a new IProcess.
	* ValgrindLaunchPlugin.java (setCurrentLaunchConfiguration): Renamed.
	(getCurrentLaunchConfiguration): Likewise.
	(getCurrentLaunch): Likewise.
	(setCurrentLaunch): Likewise.

2009-03-25  Elliott Baron  <ebaron@redhat.com>

	* icons/export_wiz.gif: New file.
	* ExportWizardConstants.java: New file.
	* ValgrindExportWizard.java: New file.
	* ValgrindExportWizardPage.java: New file.
	* META-INF/MANIFEST.MF: New deps.
	* plugin.properties: New strings.
	* plugin.xml: Added exportWizards extension and commands extension
	* messages.properties: New strings.
	* ValgrindLaunchConfigurationDelegate.java: Added handler for export command.
	* ValgrindLaunchPlugin.java: Store most recent launch config and launch.

2009-03-12  Elliott Baron  <ebaron@redhat.com>

	* messages.properties: Remove colons from checkboxes.
	* ValgrindOptionsTab.java: Use two columns, equal width.

2009-03-11  Elliott Baron  <ebaron@redhat.com>

	* ValgrindLaunchConfigurationDelegate.java:
	(launch): Use new findValgrindLocation method.
	(getPlugin): New method for subclassing.
	* ValgrindLaunchPlugin.java (findValgrindVersion): New method.
	(getValgrindCommand): New method for subclassing.
	(findValgrindLocation): New method.
	* ValgrindOptionsTab.java (handleToolChanged): Call recomputeSize.