@@ -116,16 +116,6 @@
       </wizard>
    </extension>
    <extension
-         point="org.eclipse.core.expressions.propertyTesters">
-      <propertyTester
-            class="org.eclipse.linuxtools.valgrind.launch.ValgrindLaunchPropertyTester"
-            id="org.eclipse.linuxtools.valgrind.launch.launchPropertyTester"
-            namespace="org.eclipse.linuxtools.valgrind.launch"
-            properties="launchAvailable"
-            type="org.eclipse.core.expressions.PropertyTester">
-      </propertyTester>
-   </extension>
-   <extension
          point="org.eclipse.ui.handlers">
       <handler
             class="org.eclipse.linuxtools.valgrind.launch.ExportHandler"
